Fix tab wrapping in Chrome

--- a/cubedash/static/base.css
+++ b/cubedash/static/base.css
@@ -25,9 +25,9 @@ h2 { color: #212121; }
 .panel.highlight > h2 { color: #fff; }
 .panel.odd > h2 { color: #1d81a7; }
 
-header { color: #efefef; padding: 0; width: fit-content; display: flex; flex-direction: row; }
+header { color: #efefef; padding: 0; display: flex; flex-direction: row; }
 
-.header-option { background-color: #545454; position: relative; border-collapse: collapse; max-width: 50%; vertical-align: bottom; }
+.header-option { background-color: #545454; position: relative; border-collapse: collapse; max-width: 60%; vertical-align: bottom; }
 .header-option.primary { background-color: #474747; }
 .header-option li.selected a { color: #EEAF30; }
 .header-option > div { padding: 15px 30px; margin: 0; line-height: 1.75em; flex: 1 1; }
